--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,3 +5,60 @@
     verde: #49a09d
     Lilás: #5f2c82
 */
+
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html {
+    background: #5f2c82;
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.446);
+    transition: width 0.5s, height 0.5s;
+    transition-timing-function: ease;
+    /*
+    Overflow é uma propriedade CSS que especifica como lidar com conteúdo que excede o tamanho de um elemento. Se o conteúdo de um elemento for maior do que o seu tamanho especificado, a propriedade overflow especifica como o excesso de conteúdo deve ser exibido. Os valores comuns para overflow incluem:
+
+visible: O conteúdo excedente é exibido fora do elemento, sem nenhum scroll.
+
+hidden: O conteúdo excedente é oculto e não é exibido.
+
+scroll: O conteúdo excedente é oculto e o usuário pode rolar o elemento para ver o restante do conteúdo.
+
+auto: O comportamento é como o "scroll" se o conteúdo exceder o tamanho do elemento, mas como "visible" caso contrário.*/
+}
+
+section#login > div.imagem {
+    display: block;
+    background: #5f2c82 url(../imagens/predio.jpg) no-repeat;
+    background-size: cover;
+    background-position: left bottom;
+    height: 200px;
+}
+
+section#login > div.formulario {
+    display: block;
+    padding: 10px;
+}
