--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,15 +29,15 @@ section#login {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.446);
     transition: width 0.5s, height 0.5s;
     transition-timing-function: ease;
+    transform: translate(-50%, -50%); /*Qualquer transform sempre colocar ele em último*/
     /*
     Overflow é uma propriedade CSS que especifica como lidar com conteúdo que excede o tamanho de um elemento. Se o conteúdo de um elemento for maior do que o seu tamanho especificado, a propriedade overflow especifica como o excesso de conteúdo deve ser exibido. Os valores comuns para overflow incluem:
 
@@ -69,12 +69,14 @@ div.formulario > h1 {
 
 div.formulario > p {
     font-size: 0.8em;
+    margin: 10px 0px;
 }
 
 form > div.campo {
    background-color: #5f2c82;
+   border: 2px solid #5f2c82 ;
    height: 40px;
-   border-radius: 5px;
+   border-radius: 8px;
    margin: 5px 0px;
 }
 
@@ -82,11 +84,33 @@ div.campo > label {
     display: none;
 }
 
+div.campo > span {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #66e2de;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 8px;
+    transform: translateY(-12px); /*Qualquer transform sempre colocar ele em último*/
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+}
+
 form > input[type=submit] {
     display: block;
     font-size: 1em;
     width: 100%;
-    height: 30px;
+    height: 40px;
     padding-top: 5px;
     margin-top: 5px;
     background-color: #49a09d;
@@ -109,7 +133,7 @@ form > a.botao {
     padding-top: 5px;
     margin-top: 5px;
     color: #2d6462;
-    background-color: #6be6e2;
+    background-color: #ffffff;
     border: 1px solid #49a09d;
     border-radius: 5px;
     text-decoration: none;
@@ -117,4 +141,8 @@ form > a.botao {
 
 form > a.botao > i {
     font-size: 1em;
+}
+
+form> a.botao:hover {
+    background-color: #839291;
 }
